fixed dropdown overflow

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,6 @@
 html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 :root {
@@ -71,9 +70,13 @@ body {
 
 nav {
   position: sticky;
-  position: top;
+  top: 0;
   padding: 1em;
-  max-height: 42;
+  z-index: 2;
+}
+
+nav.w3-bar.bar-light.bungee {
+    overflow: visible;
 }
 
 input {
@@ -105,6 +108,7 @@ input::placeholder {
     width: fit-content;
     padding: 0;
     display: flex;
+    z-index: 3;
 }
 
 .menu-item {
@@ -408,7 +412,7 @@ input {
   background-color: var(--colour_purple);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 4;
   border-radius: 20px;
 }
 
